# Android-video_recorder_pro

./: README.md  local.properties
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/cpp/audio_effect/: Android.mk  CMakeLists.txt
app/src/main/cpp/audio_effect/libaudio_effect/audio_effect/: audio_effect.cpp  audio_effect.h  audio_effect_adapter.cpp  audio_effect_adapter.h  audio_effect_builder.cpp  audio_effect_builder.h  audio_info.cpp  audio_info.h
app/src/main/cpp/audio_effect/libaudio_effect/audio_effect_filter/: audio_effect_filter.h  audio_effect_filter_chain.cpp  audio_effect_filter_chain.h  audio_effect_filter_factory.cpp  audio_effect_filter_factory.h
app/src/main/cpp/audio_effect/libaudio_effect/audio_effect_processor/: audio_effect_context.cpp  audio_effect_context.h  audio_effect_processor.h  audio_effect_processor_factory.cpp  audio_effect_processor_factory.h  audio_request.cpp  audio_request.h  audio_response.cpp  audio_response.h
app/src/main/cpp/audio_effect/libresampler/: Resampler.h
app/src/main/cpp/camera_preview/: Android.mk  CMakeLists.txt
app/src/main/cpp/camera_preview/jni/: ChangbaRecordingPreviewScheduler.cpp  com_timeapp_shawn_recorder_pro_recording_camera_preview_ChangbaRecordingPreviewScheduler.h
app/src/main/cpp/camera_preview/libcamera_preview/: mv_recording_preview_controller.cpp  mv_recording_preview_controller.h  recording_preview_renderer.cpp  recording_preview_renderer.h
app/src/main/cpp/libcommon/: Android.mk  CMakeLists.txt  thread.cpp
app/src/main/cpp/libcommon/egl_core/: egl_core.cpp
app/src/main/cpp/libcommon/message_queue/: message_queue.cpp
app/src/main/cpp/libcommon/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/cpp/libcommon/opengl_media/texture_copier/: gpu_texture_frame_copier.h  yuv_texture_frame_copier.h
app/src/main/cpp/libeditcore/: Android.mk  CMakeLists.txt  gpu_texture_cache.cpp  gpu_texture_cache.h  video_effect_processor.cpp  video_effect_processor.h
app/src/main/cpp/libeditcore/common/: opengl_video_frame.cpp  opengl_video_frame.h  theme_parser.cpp  theme_parser.h  video_effect_def.h  video_effect_params.h  video_filter_utils.cpp  video_filter_utils.h
app/src/main/cpp/libeditcore/decoder/: image.h  png_decoder.cpp  png_decoder.h  rgba_frame.h  scene_video_decoder.cpp  scene_video_decoder.h
app/src/main/cpp/libeditcore/editmodel/: model_filter.cpp  model_filter.h  model_timeline.cpp  model_timeline.h  model_track.cpp  model_track.h
app/src/main/cpp/libeditcore/editmodel/blur_scene/: blur_scene_filter.cpp  blur_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/header_fade_scene/: header_fade_scene_filter.cpp  header_fade_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/header_screen_scene/: header_screen_scene_filter.cpp  header_screen_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/mask_alpha/: model_mask_alpha_filter.cpp  model_mask_alpha_filter.h
app/src/main/cpp/libeditcore/editmodel/overlay_scene/: overlay_scene_filter.cpp  overlay_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/png_sequence/: png_sequence_filter.cpp  png_sequence_filter.h
app/src/main/cpp/libeditcore/editmodel/selective_blur_scene/: selective_blur_scene_filter.cpp  selective_blur_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/text_scene/: text_scene_filter.cpp  text_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/trailer_scene/: trailer_scene_filter.cpp  trailer_scene_filter.h
app/src/main/cpp/libeditcore/editmodel/transition_scene/: transition_scene_filter.cpp  transition_scene_filter.h
app/src/main/cpp/libeditcore/platform_dependent/: platform_common.cpp  platform_common.h  platform_ffmpeg.h  platform_gl.h
app/src/main/cpp/libeditcore/videoeffect/: base_video_effect.cpp  base_video_effect.h  direct_pass_effect.cpp  direct_pass_effect.h  video_effect_cache.cpp  video_effect_cache.h
app/src/main/cpp/liblivecore/: Android.mk  CMakeLists.txt
app/src/main/cpp/liblivecore/audio_encoder/: audio_encoder.cpp  audio_encoder.h  audio_encoder_adapter.cpp  audio_encoder_adapter.h
app/src/main/cpp/liblivecore/common/: live_audio_packet_pool.cpp  live_audio_packet_pool.h  live_audio_packet_queue.cpp  live_packet_pool.cpp  live_packet_pool.h  live_video_packet_queue.cpp  live_video_quality_agent.cpp  live_video_quality_agent.h  publisher_rate_feed_back.cpp  publisher_rate_feed_back.h  publisher_statistics.cpp  publisher_statistics.h
app/src/main/cpp/liblivecore/consumer/: video_consumer_thread.cpp  video_consumer_thread.h
app/src/main/cpp/liblivecore/platform_dependent/: platform_4_live_ffmpeg.h
app/src/main/cpp/liblivecore/publisher/: recording_publisher.cpp  recording_publisher.h
app/src/main/cpp/music_decoder/: Android.mk  CMakeLists.txt
app/src/main/cpp/music_decoder/jni/: MusicDecoder.cpp  com_timeapp_shawn_recorder_pro_decoder_MusicDecoder.h
app/src/main/cpp/music_decoder/libmusic_decoder/: aac_accompany_decoder.cpp  aac_accompany_decoder.h  accompany_decoder.h  song_decoder_controller.cpp  song_decoder_controller.h
app/src/main/cpp/recorder_processor/: Android.mk  CMakeLists.txt
app/src/main/cpp/recorder_processor/jni/: NativeRecordProcessor.cpp  com_timeapp_shawn_recorder_pro_recorder_NativeRecordProcessor.h
app/src/main/cpp/recorder_processor/libvocal_processor/: record_processor.cpp  record_processor.h
app/src/main/cpp/video_consumer/: Android.mk  CMakeLists.txt
app/src/main/cpp/video_consumer/jni/: VideoStudio.cpp  com_timeapp_shawn_recorder_pro_Videostudio.h
app/src/main/cpp/video_consumer/libaudio_encoder/: audio_process_encoder_adapter.cpp  audio_process_encoder_adapter.h
app/src/main/cpp/video_consumer/libmusic_merger/: music_merger.cpp  music_merger.h
app/src/main/cpp/video_consumer/libvideo_consumer/: live_common_packet_pool.cpp  live_common_packet_pool.h  video_packet_consumer.cpp  video_packet_consumer.h
app/src/main/cpp/video_encoder/: Android.mk  CMakeLists.txt
app/src/main/cpp/video_encoder/libvideo_encoder/: video_encoder_adapter.cpp  video_encoder_adapter.h
(+323 files in other folders)
